--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -596,9 +596,10 @@ p {
 }
 
 .rx-info-content-label {
-  color: $rx-color-grey-1;
-  font-weight: 600;
-  line-height: 1em;
+  color: $rx-color-grey-1 !important;
+  font-weight: 600 !important;
+  line-height: 1em !important;
+  font-size: 0.9rem !important;
 }
 
 .rx-info-content-value {
@@ -725,16 +726,30 @@ p {
   }
 }
 
+// .rx-annotation-badge {
+//   border-radius: 3px;
+//   background: $rx-color-grey-1;
+//   color: white;
+//   text-transform: uppercase;
+//   font-weight: bold;
+//   padding: 0.1rem 0.5rem;
+//   font-size: 0.75rem;
+//   display: inline-block;
+//   cursor: default;
+// }
+
 .rx-annotation-badge {
   border-radius: 3px;
-  background: $rx-color-grey-1;
-  color: white;
-  text-transform: uppercase;
-  font-weight: bold;
-  padding: 0.1rem 0.5rem;
+  background: white;
+  color: $rx-color-grey-1 !important;
+  border: $rx-color-grey-1 1px solid;
   font-size: 0.75rem;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
   display: inline-block;
   cursor: default;
+  text-transform: uppercase;
+  padding: 0.1rem 0.5rem;
 }
 
 .rx-padding-bottom-10 {
@@ -1529,4 +1544,26 @@ fieldset {
     -webkit-columns: 1;
     -moz-columns: 1;
   }
+}
+
+.rx-accordion-handle {
+  color: var(--link-color) !important;
+}
+
+.uk-accordion-content {
+  color:#595959 !important;
+}
+
+.rx-fixed-width-100 {
+  min-width: 100px;
+  text-align: center;
+}
+
+.rx-accordion-content {
+  margin: 0;
+  padding: 0 0 10px 0;
+}
+
+.rx-accordion-container {
+  margin: 20px 0 0 0;
 }
