--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -1568,3 +1568,7 @@ fieldset {
 .rx-accordion-container {
   margin: 20px 0 0 0;
 }
+
+.uk-offcanvas-bar .uk-open>.uk-accordion-title::before {
+  background-image: url("data:image/svg+xml;charset=UTF-8,%8Csvg+width%3D%2213%22+height%3D%2213%22+viewBox%3D%220+0+13+13%22+xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0D%0A++++%3Crect+fill%3D%22rgba%28149%2C+9%2C+83%2C+1%29%22+width%3D%2213%22+height%3D%221%22+x%3D%220%22+y%3D%226%22+%2F%3E%0D%0A%3C%2Fsvg%3E") !important;
+}
