--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -95,11 +95,9 @@
     <div class="uk-width-1-2@m uk-grid-medium">
       <div class=" uk-width-1-4@m">
         <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-      {% for fir in firstthumbnail %}
-      {% for canvas in volume.canvas_set.all %}
-        {% if canvas.pid in fir|safe %}
+        {% if volume.start_canvas.pid %}
            <v-volume-image
-            img-src="{{ canvas.thumbnail_crop_tallwide }}"
+            img-src="{{ volume.start_canvas.thumbnail_crop_tallwide }}"
             volume-label="{{volume.label|truncatechars:50}}">
           </v-volume-image>
         {% elif volume.pid == fir|safe|slice:"2:-6" and "[]" in fir|safe %}
@@ -110,8 +108,6 @@
           </v-volume-image>
         {% endif %}
         {% endif %}
-      {% endfor %}
-      {% endfor %}
         </a>
       </div>
       <div class="uk-width-3-4@m" tabindex="0" aria-label="Volume Information">
