--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -56,6 +56,10 @@ a.nav-link {
   list-style: none;
 }
 
+.block-paragraph_block li {
+  list-style: circle;
+}
+
 .uk-navbar-nav {
   font-weight: bold;
 }
