adding nav to bottom of all volumes and each collection page in addition to top

--- a/apps/templates/cms/volumes_page.html
+++ b/apps/templates/cms/volumes_page.html
@@ -81,6 +81,23 @@
   {% endif %}
   {% endfor %}
 </div>
+<div class="pagination" style="margin-bottom:20px">
+    <span class="step-links">
+        {% if volumes.has_previous %}
+            <a href="?{% url_replace page=volumes %}" style="margin-right:5px;">&laquo; first</a>
+            <a href="?{% url_replace page=volumes.previous_page_number %}" style="margin-right:5px;">previous</a>
+        {% endif %}
+
+        <span class="current" style="margin:0px,5px;">
+            Page {{ volumes.number }} of {{ volumes.paginator.num_pages }}
+        </span>
+
+        {% if volumes.has_next %}
+            <a href="?{% url_replace page=volumes.next_page_number %}" style="margin-left:5px;">next</a>
+            <a href="?{% url_replace page=volumes.num_pages %}" style="margin-left:5px;">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 {% endif %}
 
 {% if page.layout == 'List' %}
@@ -159,6 +176,23 @@
   {% endfor %}
 </div>
 
+<div class="pagination" style="margin-bottom:20px">
+    <span class="step-links">
+        {% if volumes.has_previous %}
+            <a href="?{% url_replace page=1 %}" style="margin-right:5px;">&laquo; first</a>
+            <a href="?{% url_replace page=volumes.previous_page_number %}" style="margin-right:5px;">previous</a>
+        {% endif %}
+
+        <span class="current" style="margin:0px,5px;">
+            Page {{ volumes.number }} of {{ volumes.paginator.num_pages }}
+        </span>
+
+        {% if volumes.has_next %}
+            <a href="?{% url_replace page=volumes.next_page_number %}" style="margin-left:5px;">next</a>
+            <a href="?{% url_replace page=volumes.paginator.num_pages %}" style="margin-left:5px;">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
     {% include "footer.html" %}
 
 {% endif %}
