--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -66,7 +66,7 @@
         </div>
         <div class="uk-width-3-4@m" tabindex="0">
           <a class="nav-link" href="#">
-            <h3 class="rx-card-title uk-margin-remove-bottom">{{ volume.label|truncatechars:100 }}</h3>
+            <h3 class="rx-card-title uk-margin-remove-bottom" title="{{ volume.label }}">{{ volume.label|truncatechars:100 }}</h3>
           </a>
           <ul class="uk-padding-remove rx-card-text">
             <li>Author: {{volume.author|truncatechars:150}}</li>
@@ -112,7 +112,7 @@
       </div>
       <div class="uk-width-3-4@m" tabindex="0" aria-label="Volume Information">
         <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-          <h3 class="rx-card-title uk-margin-remove-bottom">{{ volume.label|truncatechars:100 }}</h3>
+          <h3 class="rx-card-title uk-margin-remove-bottom" title="{{ volume.label }}">{{ volume.label|truncatechars:100 }}</h3>
         </a>
         <ul class="uk-padding-remove rx-card-text">
           <li>Author: {{volume.author|truncatechars:150}}</li>
