--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -324,6 +324,18 @@
             target="_blank">Send to Voyant</a>
         </div>
 
+        <!--Text overlay modal-->
+
+        <button class="rx-btn rx-btn-collection" type="button" uk-toggle="target: #text-overlay-modal">View Text Overlay</button>
+
+        <div id="text-overlay-modal" uk-modal>
+          <div class="uk-modal-dialog uk-modal-body">
+              <button class="uk-modal-close-default" type="button" uk-close></button>
+              <h2 class="uk-modal-title">Text</h2>
+              <p>{{canvas.result}}</p>
+          </div>
+        </div>
+        
       </div>
     </div>
 
