Add test for export view

--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -409,8 +409,10 @@
         loadedManifest: "https://{{ request.META.HTTP_HOST }}/iiif/v2/{{ volume.pid }}/manifest",
         annotationLayer: true,
         annotationCreation: true,
-        annotationState: 'annoOncreateOn',{% if "/page/all" not in request.get_full_path %}
-        canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ page.manifest.pid }}/canvas/{{ page.pid }}',{% endif %}
+        annotationState: 'annoOncreateOn',
+        {% if "/page/all" not in request.get_full_path %}
+        canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ page.manifest.pid }}/canvas/{{ page.pid }}',
+        {% endif %}
         displayLayout: false,
         sidePanel: false,
         bottomPanel: false,
