--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -346,11 +346,15 @@
           url="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all">
         </v-info-content-url-single>
 
+        <!-- <p><a href="{{ pagelink }}/{{ page.pid }}/full/full/0/default.jpg" target="_blank">{{ pagelink }}/{{ page.pid }}/full/full/0/default.jpg</a></p> -->
+        <v-info-content-url-image-link label="Image Link" pagelink="{{ pagelink }}" url="{{ localUrls }}">
+        </v-info-content-url-image-link>
+
         {% if "/page/all" in request.get_full_path in request.get_full_path %}
-          <v-info-content-url-external label="Stable Page" url="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all">
+          <v-info-content-url-external label="Stable Page" volume="{% url 'volume' volume.pid %}" url="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all">
           </v-info-content-url-external>
         {% else %}
-          <v-info-content-url-external label="Stable Page" url="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ page.pid }}">
+          <v-info-content-url-external label="Stable Page" volume="{% url 'volume' volume.pid %}" url="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ page.pid }}">
           </v-info-content-url-external>
         {% endif %}
       </div>
