--- a/apps/ingest/templates/admin/ingest/bulk/change_form.html
+++ b/apps/ingest/templates/admin/ingest/bulk/change_form.html
@@ -7,19 +7,25 @@
   <style>
     #overlay {
       color: white;
-      background: rgb(0 0 0 / 50%);;
+      background: rgba(0, 0, 0, .5);
       height: 100vh;
       font-size: 3rem;
       left: 0;
-      line-height: 100vh;
-      opacity: .75;
       position: absolute;
       text-align: center;
       top: 0;
       width: 100vw;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
     .hide-overlay {
-      display: none;
+      display: none !important;
+    }
+    #overlay-progress-container {
+      height: 32px;
     }
   </style>
 {% endblock %}
@@ -29,13 +35,52 @@
 {% block admin_change_form_document_ready %}
   {{ block.super }}
   <script type="text/javascript">
-    django.jQuery('#start_upload').on('click', function(event) {
-      // event.preventDefault();
-      django.jQuery('#overlay').removeClass('hide-overlay');
-    });
+    django.jQuery('#bulk_form').on('submit', (e) => {
+      e.preventDefault();
+
+      const overlay = django.jQuery('#overlay');
+      const label = document.getElementById('overlay-label');
+      const percentage = document.getElementById('overlay-percentage');
+      const progressBar = document.getElementById('overlay-progress');
+
+      // Set up POST req
+      const form = e.currentTarget;
+      const url = form.action;
+      let xhr = new XMLHttpRequest();
+
+      // Add event handlers
+      xhr.upload.onloadstart = (e) => {
+        // Show overlay
+        overlay.removeClass('hide-overlay');
+        percentage.textContent = '0%';
+        label.textContent = 'Uploading...';
+      };
+
+      xhr.upload.onprogress = function (e) {
+        const percent = e.lengthComputable ? (e.loaded / e.total) * 100 : 0;
+        progressBar.value = percent.toFixed(2);
+        progressBar.setAttribute('aria-valuenow', percent.toFixed(2));
+        percentage.textContent = percent.toFixed(2) + '%';
+      };
+
+      xhr.upload.onloadend = (e) => { 
+        // Redirect to manifests page
+        location.href = '/admin/manifests/manifest/?o=-4';
+      };
+
+      // Send POST req
+      xhr.open('POST', url);
+      xhr.send(new FormData(form));
+    })
   </script>
 {% endblock %}
 {% block content %}
   {{ block.super }}
-  <div id="overlay" class="hide-overlay">loading</div>
+  <div id="overlay" class="hide-overlay">
+    <div id="overlay-label">Uploading...</div>
+    <div id="overlay-percentage">0%</div>
+    <div id="overlay-progress-container">
+      <progress id="overlay-progress" value="0" max="100"></progress>
+    </div>
+  </div>
 {% endblock %}
