--- a/apps/ingest/templates/admin/ingest/bulk/change_form.html
+++ b/apps/ingest/templates/admin/ingest/bulk/change_form.html
@@ -42,6 +42,7 @@
       const label = document.getElementById('overlay-label');
       const percentage = document.getElementById('overlay-percentage');
       const progressBar = document.getElementById('overlay-progress');
+      let errored = false;
 
       // Set up POST req
       const form = e.currentTarget;
@@ -63,9 +64,21 @@
         percentage.textContent = percent.toFixed(2) + '%';
       };
 
+      function handleError (e) {
+        errored = true;
+        label.textContent = e.type.toString();
+      }
+
+      xhr.upload.addEventListener('abort', handleError);
+      xhr.upload.addEventListener('error', handleError);
+      xhr.addEventListener('abort', handleError);
+      xhr.addEventListener('error', handleError);
+
       xhr.upload.onloadend = (e) => { 
         // Redirect to manifests page
-        location.href = '/admin/manifests/manifest/?o=-4';
+        if (!errored) {
+          location.href = '/admin/manifests/manifest/?o=-4';
+        }
       };
 
       // Send POST req
