--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -1,6 +1,8 @@
 {% load static i18n %}<!DOCTYPE html>
 {% load menu_tags %}
 {% load static %}
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 {% load sass_tags %}
 <html lang="en">
   <head>
