--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -332,7 +332,7 @@
           <div class="uk-modal-dialog uk-modal-body">
               <button class="uk-modal-close-default" type="button" uk-close></button>
               <h2 class="uk-modal-title">Text</h2>
-              <p>{{canvas.result}}</p>
+              <p>{{page.result}}</p>
           </div>
         </div>
         
