trying to add html position to text layout

--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -9,6 +9,13 @@
   #rx-nav {
     display: none;
   }
+  div p span {
+    display: inline-block;
+    position: absolute; 
+  }
+  div.uk-modal-dialog {
+    width: 99%;
+  }
 </style>
 {% endblock extra_css %}
 
