flagging color for collection banner text
text color is getting overwritten by a general 'p' tag.

--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -332,7 +332,7 @@ header#page-bg .collection-image-info h3 {
 }
 header#page-bg .collection-image-info p {
   width: 100%;
-  color: #dedede;
+  color: #dedede !important;
   text-align: left;
   margin-bottom: 0px;
   margin-top: 0px;
