--- a/apps/templates/jekyll_export.html
+++ b/apps/templates/jekyll_export.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <h1 class='uk-text-truncate'>
-  {{volume.label}}    
+  {{volume.label}}
 
 </h1>
 {% endblock content %}
@@ -15,11 +15,13 @@
         <h3>Static Site Export</h3>
           {% if mode == "github" %}
             <div class="alert alert-success">GitHub export started.</div>
-            <p>Your digital edition is being exported to GitHub.  You will receive an email 
+            <p>Your digital edition is being exported to GitHub.  You will receive an email
             at {{ email }} when the export is complete.</p>
+            <p>Your repo will be available at <a href={{ repo_link }}>{{ repo_link }}</a>. The
+            site will be available at <a href={{ site_link }}>{{ site_link}}</a>.</p>
           {% else %}
             <div class="alert alert-success">Download export started.</div>
-            <p>Your digital edition is being exported.  You will receive an email 
+            <p>Your digital edition is being exported.  You will receive an email
             at {{ email }} when the export is complete with a link to download the file.</p>
           {% endif %}
       </div>
