Add version number to template

--- a/apps/templates/footer.html
+++ b/apps/templates/footer.html
@@ -18,7 +18,7 @@
   <div class="uk-width-1-1">
     <ul class="rx-footer uk-padding-remove">
       <a href="http://digitalscholarship.emory.edu/projects/software/readux.html" target="_blank" alt="Readux by Emory Center for Digital Scholarship">
-        <li>Readux 2.0</li>
+        <li>Readux {{APP_VERSION}}</li>
       </a>
     </ul>
   </div>
