fix text color for collection banner

--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -346,6 +346,7 @@ header#page-bg .collection-image-info.collasped {
   padding: 1.5em 1.75em;
   background-color: rgba(22, 22, 22, 0.33);
   opacity: 0.8;
+  color: #dedede !important;
 }
 
 header#page-bg .collection-image-info.collasped:hover {
