add title on hover to home page volumes

--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -154,7 +154,7 @@
             </a>
             {% endif %}
             <a class="nav-link" href="#">
-              <h3 class="rx-card-title uk-margin-remove-bottom uk-margin-small-top">
+              <h3 class="rx-card-title uk-margin-remove-bottom uk-margin-small-top" title="{{ volume.label }}">
                 {{ volume.label|truncatechars:200 }}
               </h3>
               <div class="rx-title-tagline"></div>
@@ -184,7 +184,7 @@
             </a>
             {% endif %}
             <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-              <h3 class="rx-card-title uk-margin-remove-bottom uk-margin-small-top">{{ volume.label|truncatechars:200 }}
+              <h3 class="rx-card-title uk-margin-remove-bottom uk-margin-small-top" title="{{ volume.label }}">{{ volume.label|truncatechars:200 }}
               </h3>
               <ul class="rx-card-text">
                 <li>Author: {{volume.author|truncatechars:150}}</li>
