--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -161,6 +161,18 @@
               <ul class="rx-card-text">
                 <li>Author: {{volume.author|truncatechars:150}}</li>
                 <li>Published: {{volume.published_date}} | Added: {{volume.created_at}}</li>
+                <li>
+                    {% if user.is_authenticated %}
+                      {% has_user_annotations volume user as result %}
+                      {% if result %}
+                        <span class="count-icon">
+                          <span class="uk-icon" uk-icon="icon: comments; ratio: 1.5"
+                            uk-tooltip="title: Number of your annotations; pos: bottom"></span>
+                          <span class="count">{% user_annotation_count volume user %}</span>
+                        </span>
+                      {% endif %}
+                    {% endif %}
+                </li>
               </ul>
             </a>
           </div>
@@ -190,17 +202,16 @@
                 <li>Author: {{volume.author|truncatechars:150}}</li>
                 <li>Published: {{volume.published_date}} | Added: {{volume.created_at}}</li>
                 <li>
-                  {% for value in user_annotation_count %}
-                  {% if volume.pid in value %}
-                  {% if "0" not in value|safe|slice:"-3:-1" %}
-                  <span class="count-icon">
-                    <span class="uk-icon" uk-icon="icon: comments; ratio: 1.5"
-                      uk-tooltip="title: Number of your annotations; pos: bottom"></span>
-                    <span class="count">{{ value|safe|slice:"-3:-1" }}</span>
-                  </span>
-                  {% endif %}
-                  {% endif %}
-                  {% endfor %}
+                    {% if user.is_authenticated %}
+                      {% has_user_annotations volume user as result %}
+                      {% if result %}
+                        <span class="count-icon">
+                          <span class="uk-icon" uk-icon="icon: comments; ratio: 1.5"
+                            uk-tooltip="title: Number of your annotations; pos: bottom"></span>
+                          <span class="count">{% user_annotation_count volume user %}</span>
+                        </span>
+                      {% endif %}
+                    {% endif %}
                 </li>
               </ul>
             </a>
