--- a/apps/templates/jekyll_export_email.html
+++ b/apps/templates/jekyll_export_email.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h1 class='uk-text-truncate'>
-  {{volume.label}}    
+  {{volume.label}}
 </h1>
 {% endblock content %}
 {% block viewer %}
@@ -23,7 +23,7 @@
           <div class="alert alert-success">GitHub Jekyll site export succeeded.</div>
           <p>Your website export has been generated and saved to a new
           GitHub repository at <a class="repo-url" href="{{ repo_url }}">{{ repo_url }}</a>.<br/>
-          After a few minutes, your annotated web edition should be accessible via GitHub Pages
+          Your annotated web edition should be accessible via GitHub Pages
           at <a class="ghpages-url" href="{{ ghpages_url }}">{{ ghpages_url }}</a>.</p>
 
           <p>For more information on using and customizing your site,
