Upgrade UIKit to 3.13.5

--- a/apps/templates/collections.html
+++ b/apps/templates/collections.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<h1 class='uk-heading-hero uk-text-center'>Readux</h1>
-<h2 class='uk-heading-primary uk-text-center'>Read. Annotate. Publish.</h2>
+<h1 class='uk-heading-xlarge uk-text-center'>Readux</h1>
+<h2 class='uk-heading-medium uk-text-center'>Read. Annotate. Publish.</h2>
 <p class='uk-text-lead uk-text-center'>Log in to Readux to read digitized collections, make your own notes, and publish your marked-up edition online.</p>
 <div>
 <ul>
