--- a/apps/templates/volume.html
+++ b/apps/templates/volume.html
@@ -15,7 +15,7 @@
     <p>{{ page.paragraph }}</p>
   </div>
   
-<h1 class='uk-heading-primary'>{{ volume.label }}</h1>
+<h1 class='uk-heading-medium'>{{ volume.label }}</h1>
 <div class="uk-child-width-1-2@s uk-child-width-1-3@m" uk-grid="masonry: true">
     {% for page in volume.canvas_set.all %}
       <div class="uk-flex uk-flex-center uk-flex-middle">
