--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load static %}
-{% load url_replace %}
 {% load has_user_annotations %}
 {% load user_annotation_count %}
 {% block content %}
@@ -37,24 +36,7 @@
   {% include "snippets/sort_dropdown.html" %}
   <!--TODO: include ascending/descending sort feature-->
 
-  <!--TODO: move inline styles into project CSS-->
-  <div class="pagination" style="margin-bottom:20px">
-      <span class="step-links">
-          {% if page_obj.has_previous %}
-              <a href="?{% url_replace page=1 %}" style="margin-right:5px;">&laquo; first</a>
-              <a href="?{% url_replace page=page_obj.previous_page_number %}" style="margin-right:5px;">previous</a>
-          {% endif %}
-
-          <span class="current" style="margin:0px,5px;">
-              Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-          </span>
-
-          {% if page_obj.has_next %}
-              <a href="?{% url_replace page=page_obj.next_page_number %}" style="margin-left:5px;">next</a>
-              <a href="?{% url_replace page=page_obj.paginator.num_pages %}" style="margin-left:5px;">last &raquo;</a>
-          {% endif %}
-      </span>
-  </div>
+  {% include "snippets/pagination.html" %}
 
 
    <div class="uk-grid-match uk-child-width-expand@s uk-grid-large" uk-grid>
@@ -139,24 +121,7 @@
   </div>
 </div>
 
-<!--TODO: move inline styles into project CSS-->
-<div class="pagination" style="margin-bottom:20px">
-    <span class="step-links">
-        {% if page_obj.has_previous %}
-            <a href="?{% url_replace page=1 %}" style="margin-right:5px;">&laquo; first</a>
-            <a href="?{% url_replace page=page_obj.previous_page_number %}" style="margin-right:5px;">previous</a>
-        {% endif %}
-
-        <span class="current" style="margin:0px,5px;">
-            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-        </span>
-
-        {% if page_obj.has_next %}
-            <a href="?{% url_replace page=page_obj.next_page_number %}" style="margin-left:5px;">next</a>
-            <a href="?{% url_replace page=page_obj.paginator.num_pages %}" style="margin-left:5px;">last &raquo;</a>
-        {% endif %}
-    </span>
-</div>
+{% include "snippets/pagination.html" %}
 
 {% include "footer.html" %}
 
