Checks for undefined fields in search

--- a/apps/templates/snippets/volume_result.html
+++ b/apps/templates/snippets/volume_result.html
@@ -2,24 +2,32 @@
 <li class="uk-width-1-1@m uk-margin-small">
     <h4>
         <span>{{ forloop.counter0|add:page_obj.start_index }}.</span>
-        <a
-            class="nav-link"
-            href="{% url 'volumeall' volume.pid %}"
-        >
-            {% if volume.label %}{{ volume.label }}{% else %}No title{% endif %}
-        </a>
+        {% if volume.pid %}
+            <a
+                class="nav-link"
+                href="{% url 'volumeall' volume.pid %}"
+            >
+                {{ volume.label|default:"No title" }}
+            </a>
+        {% else %}
+            {{ volume.label|default:"No title" }}
+        {% endif %}
     </h4>
     <dl>
-        <dt>Author{{volume.authors|pluralize}}</dt>
-        <dd>
-            <ul class="uk-margin-remove">
-                {% for author in volume.authors %}
-                    <li>{{ author }}</li>
-                {% endfor %}
-            </ul>
-        </dd>
-        <dt>Added</dt>
-        <dd>{{volume.created_at}}</dd>
+        {% if volume.authors %}
+            <dt>Author{{volume.authors|pluralize}}</dt>
+            <dd>
+                <ul class="uk-margin-remove">
+                    {% for author in volume.authors %}
+                        <li>{{ author }}</li>
+                    {% endfor %}
+                </ul>
+            </dd>
+        {% endif %}
+        {% if volume.created_at %}
+            <dt>Added</dt>
+            <dd>{{volume.created_at}}</dd>
+        {% endif %}
         {% if volume.languages %}
             <dt>Language{{volume.languages|pluralize}}</dt>
             <dd>
@@ -30,9 +38,11 @@
                 </ul>
             </dd>
         {% endif %}
-        <dt>Summary</dt> 
-        <dd class="result-volume-summary">
-            {{volume.summary|striptags|safe}}
-        </dd>
+        {% if volume.summary %}
+            <dt>Summary</dt> 
+            <dd class="result-volume-summary">
+                {{volume.summary|striptags|safe}}
+            </dd>
+        {% endif %}
     </dl>
 </li>
