--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -1649,8 +1649,21 @@ a.nav-link {
 }
 /*# sourceMappingURL=project.css.map */
 
-input[type="search"][name="q"] {
+form#search-form input[type="search"][name="q"] {
   width: 100%;
+}
+form#search-form fieldset.two-column {
+  flex-wrap: wrap;
+}
+form#search-form fieldset.two-column div:first-child {
+  padding-right: 1rem;
+}
+
+form#search-form fieldset.two-column select[multiple] {
+  height: 150px;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 ol#search-results {
