--- a/apps/templates/snippets/volume_result.html
+++ b/apps/templates/snippets/volume_result.html
@@ -13,7 +13,7 @@
             {{ volume.label|default:"No title" }}
         {% endif %}
     </h4>
-    <dl>
+    <dl class="uk-description-list">
         {% if volume.authors %}
             <dt>Author{{volume.authors|pluralize}}</dt>
             <dd>
