Add basic sorts (relevance, label alphabetical)

--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -55,6 +55,10 @@
                     Hold down “Control”, or “Command” on a Mac, to select more than one, or to deselect a selected item. Selecting multiple options will include all results matching any of the options.
                 </span>
             </fieldset>
+            <fieldset clas="uk-margin uk-width-1-1">
+                <div class="uk-form-label">{{ form.sort.label }}</div>
+                {{ form.sort }}
+            </fieldset>
             <fieldset class="uk-margin uk-width-1-1">
                 <button class="uk-button uk-button-default" type="submit">
                     Search
