Add auto-relevance sort when querying

--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -17,6 +17,9 @@
         content="Search Readux volumes"
     />
 {% endblock %}
+{% block extra_javascript %}
+    <script src="{% static 'js/search.js' %}"></script>
+{% endblock %}
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
