--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -54,11 +54,15 @@
                     <div class="uk-form-label">{{ form.language.label }}</div>
                     {{ form.language }}
                 </div>
+            </fieldset>
+            <fieldset class="uk-margin uk-width-1-1">
+                <div class="uk-form-label">{{ form.collection.label }}</div>
+                {{ form.collection }}
                 <span class="uk-text-small">
                     Hold down “Control”, or “Command” on a Mac, to select more than one, or to deselect a selected item. Selecting multiple options will include all results matching any of the options.
                 </span>
             </fieldset>
-            <fieldset clas="uk-margin uk-width-1-1">
+            <fieldset class="uk-margin uk-width-1-1">
                 <div class="uk-form-label">{{ form.sort.label }}</div>
                 {{ form.sort }}
             </fieldset>
