--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -26,31 +26,50 @@
     <h1 class="uk-heading-medium uk-text-center">Search</h1>
     <p class="uk-text-lead uk-text-center">Search and filter all volumes.</p>
 
-    <div>
+    <form
+        id="search-form"
+        class="uk-form uk-width-1-1"
+        action="{% url 'search' %}"
+        method="get"
+        accept-charset="utf-8"
+    >
+        <fieldset class="uk-margin uk-width-1-1">
+            <div class="uk-inline uk-width-1-1">
+                <span class="uk-form-icon" uk-icon="icon: search" aria-label="search"></span>
+                {{ form.q }}
+            </div>
+            <span class="uk-text-small">
+                Search for individual whole keywords. Multiple words will be searched as
+                'or' (e.g. Rome London = Rome or London).
+            </span>
+        </fieldset>
+        <fieldset class="uk-margin uk-width-1-1">
+            <div class="uk-form-label">{{ form.sort.label }}</div>
+            {{ form.sort }}
+        </fieldset>
+        <fieldset class="uk-margin uk-flex uk-flex-center uk-width-1-1">
+            <button class="uk-button uk-button-default" type="submit">
+                Search
+            </button>
+        </fieldset>
+    </form>
+    <div uk-grid id="search-grid">
         <form
-            id="search-form"
-            class="uk-form uk-form-stacked uk-width-1-1"
+            id="search-filters"
+            class="uk-form uk-form-stacked uk-width-1-3"
             action="{% url 'search' %}"
             method="get"
             accept-charset="utf-8"
         >
-            <fieldset class="uk-margin uk-width-1-1">
-                <div class="uk-inline uk-width-1-1">
-                    <span class="uk-form-icon" uk-icon="icon: search" aria-label="search"></span>
-                    {{ form.q }}
-                </div>
-                <span class="uk-text-small">
-                    Search for individual whole keywords. Multiple words will be searched as
-                    'or' (e.g. Rome London = Rome or London). Stopwords (e.g. in, the) will be
-                    dropped.
-                </span>
-            </fieldset>
-            <fieldset class="uk-margin uk-flex two-column">
-                <div class="uk-width-1-2">
+            <h4 class="uk-flex uk-flex-center">Filter results</h4>
+            <fieldset class="uk-margin">
+                <div class="uk-width-1-1">
                     <div class="uk-form-label">{{ form.author.label }}</div>
                     {{ form.author }}
                 </div>
-                <div class="uk-width-1-2">
+            </fieldset>
+            <fieldset class="uk-margin">
+                <div class="uk-width-1-1">
                     <div class="uk-form-label">{{ form.language.label }}</div>
                     {{ form.language }}
                 </div>
@@ -63,29 +82,27 @@
                 </span>
             </fieldset>
             <fieldset class="uk-margin uk-width-1-1">
-                <div class="uk-form-label">{{ form.sort.label }}</div>
-                {{ form.sort }}
-            </fieldset>
-            <fieldset class="uk-margin uk-width-1-1">
                 <button class="uk-button uk-button-default" type="submit">
-                    Search
+                    Apply
                 </button>
             </fieldset>
         </form>
-    </div>
-    <div class="uk-flex uk-flex-center uk-margin">
-        {{ volumes.count }} result{{ volumes.count|pluralize }}
-    </div>
-    <div class="uk-flex uk-flex-center">
-        {% include "snippets/pagination.html" %}
-    </div>
-    <ol class="uk-flex uk-flex-column uk-width-1-1@m uk-list-divider" id="search-results">
-        {% for volume in volumes %}
-            {% include "snippets/volume_result.html" %}
-        {% endfor %}
-    </ol>
-    <div class="uk-flex uk-flex-center">
-        {% include "snippets/pagination.html" %}
+        <div class="uk-width-2-3">
+            <h4 class="uk-flex uk-flex-center">
+                {{ volumes.count }} result{{ volumes.count|pluralize }}
+            </h4>
+            <div class="uk-flex uk-flex-center">
+                {% include "snippets/pagination.html" %}
+            </div>
+            <ol class="uk-flex uk-flex-column uk-list-divider" id="search-results">
+                {% for volume in volumes %}
+                    {% include "snippets/volume_result.html" %}
+                {% endfor %}
+            </ol>
+            <div class="uk-flex uk-flex-center">
+                {% include "snippets/pagination.html" %}
+            </div>
+        </div>
     </div>
 
 {% endblock content %}
