Upgrade UIKit to 3.13.7 and fix offcanvas

--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -780,7 +780,7 @@ p {
   color: white;
 }
 
-.uk-offcanvas {
+.uk-offcanvas-container {
   top: -80px;
   position: inherit;
 }
@@ -1647,7 +1647,6 @@ a.nav-link {
 .uk-offcanvas-bar .uk-open > .uk-accordion-title::before {
   background-image: url("data:image/svg+xml;charset=UTF-8,%8Csvg+width%3D%2213%22+height%3D%2213%22+viewBox%3D%220+0+13+13%22+xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0D%0A++++%3Crect+fill%3D%22rgba%28149%2C+9%2C+83%2C+1%29%22+width%3D%2213%22+height%3D%221%22+x%3D%220%22+y%3D%226%22+%2F%3E%0D%0A%3C%2Fsvg%3E") !important;
 }
-/*# sourceMappingURL=project.css.map */
 
 form#search-form input[type="search"][name="q"] {
   width: 100%;
@@ -1683,3 +1682,5 @@ ol#search-results dd.result-volume-summary {
 ol#search-results dl {
   margin-left: 2rem;
 }
+
+/*# sourceMappingURL=project.css.map */
