--- a/apps/templates/snippets/volume_result.html
+++ b/apps/templates/snippets/volume_result.html
@@ -14,6 +14,10 @@
         {% endif %}
     </h4>
     <dl class="uk-description-list">
+        {% if volume.published_date %}
+            <dt>Published</dt>
+            <dd>{{volume.published_date}}</dd>
+        {% endif %}
         {% if volume.authors and "[no author]" not in volume.authors %}
             <dt>Author{{volume.authors|pluralize}}</dt>
             <dd>
