--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -49,7 +49,7 @@
                 {{ form.sort }}
             </fieldset>
             <fieldset class="uk-margin uk-flex uk-flex-center uk-width-1-1">
-                <button class="uk-button uk-button-default" type="submit">
+                <button class="uk-button uk-button-secondary" type="submit">
                     Search
                 </button>
             </fieldset>
@@ -59,7 +59,7 @@
                 class="uk-form uk-form-stacked uk-width-1-3"
                 id="search-filters"
             >
-                <h4 class="uk-flex uk-flex-center">Filter results</h4>
+                <h4 class="uk-flex uk-flex-center">Filters</h4>
                 <fieldset class="uk-margin">
                     <div class="uk-width-1-1">
                         <div class="uk-form-label">{{ form.author.label }}</div>
@@ -79,8 +79,11 @@
                         Hold down “Control”, or “Command” on a Mac, to select more than one, or to deselect a selected item. Selecting multiple options will include all results matching any of the options.
                     </span>
                 </fieldset>
-                <fieldset class="uk-margin uk-width-1-1">
-                    <button class="uk-button uk-button-default" type="submit">
+                <fieldset class="uk-margin uk-width-1-1 uk-flex uk-flex-between">
+                    <button id="reset-filters" class="uk-button uk-button-danger" type="button">
+                        Reset filters
+                    </button>
+                    <button class="uk-button uk-button-secondary" type="submit">
                         Apply
                     </button>
                 </fieldset>
